# image_tool

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  image_tool.cpp
benchmarks/: CMakeLists.txt  downsize_benchmark.cpp  evaluate_benchmark.cpp  prepare_data.cpp  quality_evaluation.cpp  resize_performance.cpp  upsize_benchmark.cpp
include/: file_comparer.h  file_quality_evaluator.h  file_resizer.h  path_utils.h  results.h  rgb_image.h  rgb_pixel.h
scripts/: build.sh  example.sh  run_benchmark.sh
src/: CMakeLists.txt
src/metrics/: file_comparer.cpp  file_quality_evaluator.cpp
src/resizers/: edsr_neural_resizer.cpp  file_resizer.cpp  my_resizer.cpp  opencv_resizer.cpp  real_esrgan_neural_resizer.cpp
src/rgb/: rgb_image.cpp  rgb_pixel.cpp
src/utils/: path_utils.cpp
